Add publish tasks

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,8 @@ trigger:
   - '*'
 
 pool:
-  vmImage: 'ubuntu-18.04'
+  name : RudiPoolHambrock
+#  vmImage: 'ubuntu-18.04'
   demands:
     - npm
 
