--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,7 @@ trigger:
   - '*'
 
 pool:
-  name : RudiPoolHambrock
-##  vmImage: 'ubuntu-18.04'
+  vmImage: 'ubuntu-18.04'
   demands:
     - npm
 
@@ -43,21 +42,13 @@ steps:
       command: 'restore'
       projects: '**/*.csproj'
 
-  - task: DotNetCoreCLI@2
-    displayName: 'Build the project - $(buildConfiguration)'
-    inputs:
-      command: 'build'
-      arguments: '--no-restore --configuration $(buildConfiguration)'
-      projects: '**/*.csproj'
+  - template: templates/build.yml
+    parameters:
+      buildConfiguration: 'Debug'
 
-  - task: DotNetCoreCLI@2
-    displayName: 'Publish the project - $(buildConfiguration)'
-    inputs:
-      command: 'publish'
-      projects: '**/*.csproj'
-      publishWebProjects: false
-      arguments: '--no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration)'
-      zipAfterPublish: true
+  - template: templates/build.yml
+    parameters:
+      buildConfiguration: 'Release'
 
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact: drop'
